WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269831
[JSC] Fix parsing of private names with Unicode start characters
https://bugs.webkit.org/show_bug.cgi?id=269831
Summary
[JSC] Fix parsing of private names with Unicode start characters
Ross Kirsling
Reported
2024-02-20 23:24:16 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2024-02-20 23:42:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24865
EWS
Comment 2
2024-02-21 23:13:20 PST
Committed
275152@main
(5fc81f8795e8): <
https://commits.webkit.org/275152@main
> Reviewed commits have been landed. Closing PR #24865 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-21 23:14:14 PST
<
rdar://problem/123425805
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug