[JSC] Fix parsing of private fields with Unicode start characters https://bugs.webkit.org/show_bug.cgi?id=269831

Reviewed by Darin Adler and Yusuke Suzuki.

Our lexer can't currently handle various class-private field names with valid Unicode start characters, like `#𐡀`.
After seeing that m_current is '#', we call isSingleCharacterIdentStart(peek(1)), which complains of U16_IS_SURROGATE;
instead of trying to cut a corner, we need to get the next code point from U16_GET, just like we did for m_current.

* JSTests/test262/expectations.yaml:
Mark 24 test cases passing.

* Source/JavaScriptCore/parser/Lexer.cpp:
(JSC::Lexer<T>::lexWithoutClearingLineTerminator):
Use U16_GET when a private field name starts with a non-Latin1 character.

Canonical link: https://commits.webkit.org/275152@main